fix: change line-height and letter-spacing property

--- a/src/scss/_benefits.scss
+++ b/src/scss/_benefits.scss
@@ -45,7 +45,6 @@
 .benefits__list-item {
     color: $color-font-additional;
     font-size: 20px;
-    letter-spacing: -0.25px;
 }
 
 .benefits__image {
@@ -62,7 +61,6 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
-    letter-spacing: -0.25px;
 }
 
 .benefits::after {
