--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -16,7 +16,7 @@
 
 .footer__nav {
   font-size: 14px;
-  line-height: 22px;
+  line-height: 1.57;
 }
 
 .footer__bottom {
@@ -28,7 +28,7 @@
 .footer__copyright {
   margin-top: 48px;
   font-size: 14px;
-  line-height: 22px;
+  line-height: 1.57;
 }
 
 .footer__items {
