--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -22,5 +22,6 @@
     color: $color-white;
     padding: 8px 20px;
     font-weight: 500;
+    letter-spacing: -0.25px;
 }
 
