--- a/src/scss/_modificators.scss
+++ b/src/scss/_modificators.scss
@@ -8,20 +8,19 @@
     font-size: 40px;
     line-height: 1.25;
     margin-bottom: 16px;
+    letter-spacing: -0.5px;
 }
 
 .title--h3 {
     font-weight: 700;
     font-size: 24px;
-    line-height: 34px;
-    letter-spacing: -0.25px;
+    line-height: 1.42;
 }
 
 .title--h4 {
     font-weight: 700;
     font-size: 32px;
     line-height: 1.31;
-    letter-spacing: -0.25px;
 }
 
 .button--grey {
