--- a/src/scss/_subscribe.scss
+++ b/src/scss/_subscribe.scss
@@ -42,4 +42,6 @@
     font-weight: 500;
     font-size: 16px;
     border-radius: 2px;
+    letter-spacing: -0.25px;
+    line-height: 1.5;
 }
